V1 ProductController
