# openapi.yaml
@@ -163,7 +163,7 @@ paths:
                 '500':
                     description: "Internal server error"
 
-    /review/byProduct/{productId}:
+    /reviews/byProduct/{productId}:
         get:
             summary: "Get reviews by product"
             operationId: "getReviewsByProduct"
@@ -198,7 +198,7 @@ paths:
                 '500':
                     description: "Internal server error"
 
-    /review/byUser/{userId}:
+    /reviews/byUser/{userId}:
         get:
             summary: "Get reviews by user"
             operationId: "getReviewsByUser"
@@ -233,7 +233,7 @@ paths:
                 '500':
                     description: "Internal server error"
 
-    /review/newReview:
+    /reviews/newReview:
         post:
             summary: "Add review"
             operationId: "addReview"
@@ -260,7 +260,7 @@ paths:
                 '500':
                     description: "Internal server error"
     
-    review/{reviewId}:
+    reviews/{reviewId}:
         delete:
             summary: "Delete review"
             operationId: "deleteReview"
@@ -305,7 +305,7 @@ paths:
                 '500':
                     description: "Internal server error"
     
-    /getProductsbyId:
+    /products/{productId} :
         get:
             summary: "Get product by id"
             operationId: "getProductbyId"
@@ -336,7 +336,7 @@ paths:
                 '500':
                     description: "Internal server error"
 
-    /getProducts:
+    /products/:
         get:
             summary: "Get all products"
             operationId: "getProducts"
@@ -363,7 +363,7 @@ paths:
                 '500':
                     description: "Internal server error"
 
-    /addProduct: 
+    /product/newProduct: 
         post:
             summary: "Add product"
             operationId: "addProduct"
@@ -389,7 +389,7 @@ paths:
                     description: "Bad request"
                 '500':
                     description: "Internal server error"
-    /updateProduct: 
+    products/{productId}: 
         post:
             summary: "Update product"
             operationId: "updateProduct"
@@ -421,7 +421,7 @@ paths:
                     description: "Bad request"
                 '500':
                     description: "Internal server error"    
-    /deleteProduct:
+    products/{productId}:
         delete:
             summary: "Delete product"
             operationId: "deleteProduct"
